# dvt-bot

./: .gitignore  Cargo.toml
migrations/2019-07-10-224702_create_guilds/: down.sql  up.sql
src/: lib.rs  macros.rs  main.rs
src/core/: consts.rs  framework.rs  mod.rs
src/core/db/: mod.rs  models.rs  schema.rs
src/modules/: mod.rs
src/modules/commands/: mod.rs
src/modules/commands/admins/: management.rs
src/modules/commands/general/: mod.rs
