[package]
name = "dvt-bot"
version = "0.1.0"
authors = ["Tunahan Karlibas <dvt.tnhn.krlbs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.6.2"
kankyo = "0.3"
chrono = "0.4.7"
lazy_static = "1.3.0"


[dependencies.diesel]
version = "1.0.0"
features = ["postgres", "chrono", "r2d2"]
